--- a/Simplifier.vcproj
+++ b/Simplifier.vcproj
@@ -67,7 +67,7 @@
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
 				Culture="1033"
-				AdditionalIncludeDirectories="$(IntDir)"
+				AdditionalIncludeDirectories="&quot;$(IntDir)&quot;"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -163,6 +163,8 @@
 				AdditionalDependencies="opengl32.lib glaux.lib glew32.lib cudart.lib cutil32.lib glut32.lib cudpp32.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(CUDA_LIB_PATH)&quot;;.\common\lib"
+				DelayLoadDLLs=""
+				AssemblyLinkResource=""
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
